--- a/.gitignore
+++ b/.gitignore
@@ -5,12 +5,6 @@
 .DS_Store
 .quarto
 data/
+output/kraken2_pipeline/kraken2_output
 images/
 output/
-02.Report_X207SC23100349-Z01-F001
-02.Report_X207SC23100349-Z01-F001.zip
-code/bash-scripts/*tutorial.sh
-code/bash-scripts/metaquast*
-*.gz
-*-out.txt
-*stdout*.txt
